--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
+	"homepage": "https://se-curriculum-planner.github.io/portal-static-ts",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@mui/icons-material": "^5.14.19",
 		"@mui/material": "^5.14.19",
 		"@mui/styled-engine-sc": "6.0.0-alpha.7",
+		"gh-pages": "^6.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-query": "^3.39.3",
