--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
 		"@mui/material": "^5.14.19",
 		"@mui/styled-engine-sc": "6.0.0-alpha.7",
 		"gh-pages": "^6.1.0",
+		"pdfjs-dist": "^4.0.269",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-pdf": "^7.5.1",
 		"react-query": "^3.39.3",
 		"react-router-dom": "^6.20.1",
 		"styled-components": "^6.1.1"
@@ -36,7 +38,8 @@
 		"postcss": "^8.4.31",
 		"tailwindcss": "^3.3.5",
 		"typescript": "^5.2.2",
-		"vite": "^5.0.0"
+		"vite": "^5.0.0",
+		"vite-plugin-static-copy": "^1.0.0"
 	},
 	"peerDependencies": {
 		"react": "^17.0.0 || ^18.0.0",
