--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@mui/icons-material": "^5.14.19",
 		"@mui/material": "^5.14.19",
 		"@mui/styled-engine-sc": "6.0.0-alpha.7",
+		"axios": "^1.6.2",
 		"gh-pages": "^6.1.0",
 		"pdfjs-dist": "^4.0.269",
 		"react": "^18.2.0",
@@ -23,7 +24,8 @@
 		"react-pdf": "^7.5.1",
 		"react-query": "^3.39.3",
 		"react-router-dom": "^6.20.1",
-		"styled-components": "^6.1.1"
+		"styled-components": "^6.1.1",
+		"zustand": "^4.4.7"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.37",
